총명 #24 방문자수 조회 추가중
 방문자수 조회 추가중

--- a/SAW_GOOD/src/main/webapp/WEB-INF/web.xml
+++ b/SAW_GOOD/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,10 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<listener>
+		<listener-class>com.saw.good.admin.visitor.controller.VisitorListener</listener-class>
+	</listener>
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
