--- a/SAW_GOOD/src/main/webapp/WEB-INF/web.xml
+++ b/SAW_GOOD/src/main/webapp/WEB-INF/web.xml
@@ -53,7 +53,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+	<!-- <welcome-file-list>
+		<welcome-file>/WEB-INF/views/index.jsp</welcome-file>
+	</welcome-file-list> -->
 </web-app>
